--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_expanded_tile: ^0.3.7
   camera: ^0.10.5+5
   file_picker: ^6.0.0
+  speech_to_text: ^6.3.0
 
 dev_dependencies:
   flutter_test:
