--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   provider: ^6.0.5
   confirm_dialog: ^1.0.2
   speech_to_text: ^6.3.0
+  wheel_chooser: ^1.1.2
+  selector_wheel: ^1.1.2
+  multi_dropdown: ^2.1.0
+
 
 dev_dependencies:
   flutter_test:
