--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   multi_dropdown: ^2.1.0
   bulleted_list: ^0.0.1+0.1a
   firebase_core: ^2.23.0
+  super_bullet_list: ^0.0.2
 
 dev_dependencies:
   flutter_test:
