--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   selector_wheel: ^1.1.2
   multi_dropdown: ^2.1.0
   bulleted_list: ^0.0.1+0.1a
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
