--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   bulleted_list: ^0.0.1+0.1a
   firebase_core: ^2.23.0
   super_bullet_list: ^0.0.2
+  easy_pdf_viewer: ^1.0.7
+  firebase_storage: ^11.5.2
+  cloud_firestore: ^4.13.2
 
 dev_dependencies:
   flutter_test:
