--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   cloud_firestore: ^4.13.2
   flutter_dotenv: ^5.1.0
   timer_count_down: ^2.2.2
+  firebase_auth: ^4.14.1
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
@@ -102,6 +104,7 @@ flutter:
     - lib/assets/images/bbq.jpeg
     - lib/assets/images/ronald.jpeg
     - lib/assets/images/cheah.png
+    - lib/assets/images/google-logo.png
 
   fonts:
     - family: Futura
