--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "C:/Users/Bonifacio Ronald/Documents/Bonifacio Ronald/Dev/projects/GDG George Town/Intervue/linux"
+  "cmake.sourceDirectory": "/Users/hansandreanto/Development/DevHack-GDG/Intervue/linux"
 }
