--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   dio: ^5.3.4
   read_pdf_text: ^0.2.1
   syncfusion_flutter_pdf: ^23.2.4
+  collection: ^1.17.1
 
 dev_dependencies:
   flutter_test:
